{
    "name": "New Controls",
    "maps": [
        {
            "name": "ControllerPlayer",
            "id": "7865bf19-e050-4409-8f76-5766fe429847",
            "actions": [
                {
                    "name": "SpeedBoost",
                    "type": "Button",
                    "id": "426491f2-ee69-47b0-a487-c6124645988f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f03a6a67-6b01-4747-a2c7-a244c8373180",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "296ed0ed-d668-44ab-beb8-d425460ac20d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec72d7f2-62dd-4fc6-9458-5e1f9fd11bdf",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedBoost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6532a613-bda7-49c7-89bf-be5b7b3f5290",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7be0fc07-6ac8-4666-ba38-b23d6c90a9ce",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}